
Core and builtins
-----------------

- Patch #1673759: add a missing overflow check when formatting floats
  with %G.

- Patch #1733960: Allow T_LONGLONG to accept ints.

- Prevent expandtabs() on string and unicode objects from causing a segfault
  when a large width is passed on 32-bit platforms.

- Bug #1733488: Fix compilation of bufferobject.c on AIX.


Library
-------

- Reverted the fix for bug #1548891 because it broke compatibility with
  arbitrary read buffers. Added a note in the documentation.

- GB18030 codec now can encode additional two-byte characters that
  are missing in GBK.

- Bug #1704793: Raise KeyError if unicodedata.lookup cannot
  represent the result in a single character.

- Change location of the package index to pypi.python.org/pypi

- Bug #1701409: Fix a segfault in printing ctypes.c_char_p and
  ctypes.c_wchar_p when they point to an invalid location.  As a
  sideeffect the representation of these instances has changed.

- Bug #1734723: Fix repr.Repr() so it doesn't ignore the maxtuple attribute.

- Bug #1728403: Fix a bug that CJKCodecs StreamReader hangs when it
  reads a file that ends with incomplete sequence and sizehint argument
  for .read() is specified.

- Bug #1730389: Have time.strptime() match spaces in a format argument with
  ``\s+`` instead of ``\s*``.

- SF 1668596/1720897: distutils now copies data files
  even if package_dir is empty.

- Fix bug in marshal where bad data would cause a segfault due to
  lack of an infinite recursion check.

- mailbox.py: Ignore stray directories found in Maildir's cur/new/tmp
  subdirectories.

- HTML-escape the plain traceback in cgitb's HTML output, to prevent
  the traceback inadvertently or maliciously closing the comment and
  injecting HTML into the error page.

- Bug #1290505: Properly clear time.strptime's locale cache when the locale
  changes between calls.  Backport of r54646 and r54647.

- Bug #1706381: Specifying the SWIG option "-c++" in the setup.py file